# SDLTEST

./: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  Texture.cpp  Texture.h
